--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,18 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"socket.io": "^4.7.2"
+		"express-async-errors": "^3.1.1",
+		"express-rate-limit": "^6.9.0",
+		"helmet": "^7.0.0",
+		"jsonwebtoken": "^9.0.1",
+		"mongoose": "^7.4.2",
+		"morgan": "^1.10.0",
+		"socket.io": "^4.7.2",
+		"xss-clean": "^0.1.4"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1"
