--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"express-async-errors": "^3.1.1",
 		"express-rate-limit": "^6.9.0",
 		"helmet": "^7.0.0",
+		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.2",
 		"morgan": "^1.10.0",
