--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
 		"react-icons": "^4.10.1",
 		"react-router-dom": "^6.14.2",
 		"react-toastify": "^9.1.3",
-		"socket.io-client": "^4.7.2"
+		"socket.io-client": "^4.7.2",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
