--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.2",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"socket.io": "^4.7.2",
 		"xss-clean": "^0.1.4"
 	},
