--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"socket.io": "^4.7.2",
+		"uuid": "^9.0.0",
 		"xss-clean": "^0.1.4"
 	},
 	"devDependencies": {
