--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 		"helmet": "^7.0.0",
 		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^9.0.1",
+		"lodash": "^4.17.21",
 		"mongoose": "^7.4.2",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
